menambahkan h1 dan paragraf

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar git</title>
 </head>
 <body>
-    
+    <div>
+        <h1>LATIHAN GIT</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia iste, nostrum aut ipsum,
+            odit nulla neque nam iure eum, mollitia dolorem minima rerum delectus. Beatae eaqu
+            e cupiditate sint aliquid reiciendis!</p>
+    </div>
 </body>
 </html>
