menambahkan div baru dan ul li

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
             odit nulla neque nam iure eum, mollitia dolorem minima rerum delectus. Beatae eaqu
             e cupiditate sint aliquid reiciendis!</p>
     </div>
+    <div>
+        <ul>
+            <li>satu</li>
+            <li>dua</li>
+            <li>tiga</li>
+        </ul>
+    </div>
 </body>
 </html>
